[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]
members = ["jsonrpsee-ts-macros"]

[workspace.dependencies]
jsonrpsee-ts-macros = { version = "0.1.0", path = "jsonrpsee-ts-macros" }

[package]
name = "jsonrpsee-ts"
version.workspace = true
edition.workspace = true
description = "Generate rpckit-compatible TypeScript schemas from jsonrpsee RPC traits"
documentation = "https://docs.rs/jsonrpsee-ts"
readme = "README.md"
license.workspace = true

[dependencies]
jsonrpsee-ts-macros.workspace = true
ts-rs = "12.0.1"

[dev-dependencies]
indoc = "2.0.7"
jsonrpsee = { version = "0.26.0", features = ["client", "macros", "server"] }
serde = { version = "1.0.228", features = ["alloc", "derive", "std"] }
tempfile = "3.15.0"
