[package]
name = "jsonrpsee-ts-macros"
version.workspace = true
edition.workspace = true
description = "Procedural macros for jsonrpsee-ts"
documentation = "https://docs.rs/jsonrpsee-ts-macros"
homepage = "https://github.com/NanamiNakano/jsonrpsee-ts"
repository = "https://github.com/NanamiNakano/jsonrpsee-ts"
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["extra-traits", "full"] }
